--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,43 +1,30 @@
 name: scrape-tradingview-currencies-recent
-
-
 on:
-schedule:
-- cron: "*/5 * * * *" # Every 5 minutes
-workflow_dispatch: {}
-
-
+  schedule:
+    - cron: "*/5 * * * *"
+  workflow_dispatch: {}
 concurrency:
-group: scrape-tradingview-currencies-recent
-cancel-in-progress: true
-
-
+  group: scrape-tradingview-currencies-recent
+  cancel-in-progress: true
 jobs:
-run:
-runs-on: ubuntu-latest
-timeout-minutes: 10
-steps:
-- name: Checkout repo
-uses: actions/checkout@v4
-
-
-- name: Set up Python 3.11
-uses: actions/setup-python@v5
-with:
-python-version: '3.11'
-
-
-- name: Install dependencies
-run: |
-python -m pip install --upgrade pip
-pip install -r requirements.txt
-
-
-- name: Run scraper
-env:
-DATABASE_URL: ${{ secrets.DATABASE_URL }}
-# Optional tuning knobs; safe defaults are baked in
-JITTER_LOW: '10'
-JITTER_HIGH: '20'
-run: |
-python cloud/scraper.py
+  run:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run scraper
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JITTER_LOW: "10"
+          JITTER_HIGH: "20"
+        run: |
+          python cloud/scraper.py
