--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,8 +1,9 @@
 name: scrape-tradingview-currencies-recent
 on:
   schedule:
-    - cron: "*/5 * * * *"
-  workflow_dispatch: {}
+    - cron: "*/5 * * * *"      # at :00, :05, :10, ...
+    - cron: "2-59/5 * * * *"   # at :02, :07, :12, ...
+  workflow_dispatch:
 concurrency:
   group: scrape-tradingview-currencies-recent
   cancel-in-progress: true
